# ashrimp

./: CMakeLists.txt  Makefile  README.md
include/: ashrimp.h  ashrimp_table.h
lib/: CMakeLists.txt
lib/gc/: CMakeLists.txt
lib/gc/include/: gc.h
lib/gc/src/: gc_free.c  gc_malloc.c
lib/parser/: CMakeLists.txt
lib/parser/include/: parser.h
lib/parser/src/: parse_string.c
lib/utils/: CMakeLists.txt
lib/utils/include/: utils.h
lib/utils/src/: check_file_ext.c  check_filename.c  check_is_nb.c  check_name_format.c  get_arrlen.c  my_memset.c  my_strcat.c  my_strcmp.c  my_strcpy.c  my_strlen.c
lib/valloc/: CMakeLists.txt
lib/valloc/include/: valloc.h
lib/valloc/src/: my_free.c  my_malloc.c  print_chunk_list.c
src/: CMakeLists.txt  ashrimp.c  delete_comments.c  get_expr_type.c  init_fc_label_table.c  init_label_addr.c  input_error_handler.c  open_read_file.c  parse_fc_label_table.c  parse_infile_buffer.c  print_help.c  set_output_file.c
test/: CMakeLists.txt  test.ash
